# positron-cross-section

./: .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  LICENSE  README.rst  pyproject.toml  setup.cfg
.github/workflows/: python-3.8-pre-commit.yml  python-3.9-pre-commit.yml
output/bump/: cross_sections.csv  summary.csv
output/gtcs/: normalized_signal.csv
output/high-energy-gtcs/: cross_sections.csv  normalized_signal.csv
output/no-bump/: cross_sections.csv  normalized_signal.csv  summary.csv
positron_cross_section/: setup.cfg  setup.py
positron_cross_section/src/positron_cross_section/: __init__.py  gas.py  gtcs.py  main.py  plot.py
previous_results/: ethane_tcs.csv  ethane_tcs_floeder.csv
src/positron_cross_section/: gas.py  gtcs.py  main.py  matplotlib_importer.py  plot.py
tools/: install-dev-env  windows-install.ps1
