[metadata]
name = positron_cross_section
version = 0.0.42
author = Ryan Stocks
author_email = ryan.stocks@anu.edu.au
description = "A program for calculating and plotting positron cross sections."
long_description = file: README.rst
license = MIT
url = https://github.com/ryanstocks00/positron-cross-section

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
    typer
    pytest
    pandas
    pandas-stubs
    numpy
    matplotlib
    pydantic
    uncertainties

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    positron-cross-section = positron_cross_section.main:main
