[metadata]
name = positron_cross_section
description = "A program for calculating and plotting positron cross sections."
author = Ryan Stocks
author_email = ryan.stocks@anu.edu.au
license = All rights reseved, 2022 Ryan Stocks
url = https://github.com/ryanstocks00/positron_cross_section_analysis

[options]
zip_safe = False
versioning = dev
python_requires = >=3.8
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
    typer
    pytest
    pandas
    pandas-stubs
    numpy>=1.21.4
    nptyping
    matplotlib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    positron_cross_section = positron_cross_section.main:main
